<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2018. M. Reza Nasirloo
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    >

    <Button
        android:id="@+id/activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="Activity"
        tools:ignore="HardcodedText"
        />

    <Button
        android:id="@+id/conductor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/activity"
        android:text="Conductor"
        tools:ignore="HardcodedText"
        />

    <Button
        android:id="@+id/activity_dagger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/activity"
        android:layout_toRightOf="@+id/activity"
        android:text="activity with dagger"
        tools:ignore="HardcodedText"
        />

    <Button
        android:id="@+id/conductor_dagger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/conductor"
        android:layout_alignBottom="@+id/conductor"
        android:layout_toEndOf="@+id/conductor"
        android:layout_toRightOf="@+id/conductor"
        android:text="Conductor with dagger"
        tools:ignore="HardcodedText"
        />

    <Button
        android:id="@+id/fragment_delegate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/conductor"
        android:text="Fragment"
        tools:ignore="HardcodedText"
        />

    <Button
        android:id="@+id/button_support_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/conductor"
        android:layout_toEndOf="@+id/fragment_delegate"
        android:layout_toRightOf="@+id/fragment_delegate"
        android:text="Support Fragment"
        tools:ignore="HardcodedText"
        />

    <Button
        android:id="@+id/button_custom_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/fragment_delegate"
        android:text="Custom View"
        tools:ignore="HardcodedText"
        />

    <Button
        android:id="@+id/button_custom_view_dagger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_support_fragment"
        android:layout_toEndOf="@+id/button_custom_view"
        android:layout_toRightOf="@+id/button_custom_view"
        android:text="Dagger Custom View"
        tools:ignore="HardcodedText"
        />

    <Button
        android:id="@+id/button_multi_presenters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/button_custom_view"
        android:text="Multiple Presenters"
        tools:ignore="HardcodedText"
        />

    <Button
        android:id="@+id/button_custom_view_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/activity"
        android:layout_below="@+id/button_multi_presenters"
        android:text="Infinite Navigation with CustomView in Fragment"
        tools:ignore="HardcodedText,RtlHardcoded"
        />
</RelativeLayout>
