<!--
  ~ Copyright 2018. M. Reza Nasirloo
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.mrezanasirloo.slick.sample.fragment.ActivityFragmentHost"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Note: android.app.Fragment is deprecated in Android P, use support package."
        android:textSize="24sp"
        tools:ignore="HardcodedText"
        />

    <Button
        android:id="@+id/button_delegate_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="Delegate Android Fragment"
        tools:ignore="HardcodedText"
        />

    <Button
        android:id="@+id/button_dagger_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="Dagger Fragment"
        tools:ignore="HardcodedText"
        />

    <Button
        android:id="@+id/button_delegate_dagger_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="Delegate Dagger Android Fragment"
        tools:ignore="HardcodedText"
        />

</LinearLayout>
