<?xml version="1.0" encoding="utf-8"?>
<com.github.slick.sample.cutstomview.CustomView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/custom_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.github.slick.sample.cutstomview.CustomViewActivity"
    >

    <TextView
        android:id="@+id/textView_custom_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="TextView"
        />

    <Button
        android:id="@+id/button_new_ac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="Button"
        />
</com.github.slick.sample.cutstomview.CustomView>
